it works...to a degree

--- a/schnitte/schnitte/schnitte.vcxproj.filters
+++ b/schnitte/schnitte/schnitte.vcxproj.filters
@@ -21,12 +21,39 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="capture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="snippet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="kiss_fft130\_kiss_fft_guts.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="kiss_fft130\kiss_fft.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="kiss_fft130\kissfft.hh">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="schnitte.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="capture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="snippet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="kiss_fft130\kiss_fft.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
