--- a/schnitte/schnitte/schnitte.vcxproj
+++ b/schnitte/schnitte/schnitte.vcxproj
@@ -93,7 +93,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\SDL2-2.0.7\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -150,19 +150,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="arduinoSender.h" />
     <ClInclude Include="capture.h" />
     <ClInclude Include="common.h" />
+    <ClInclude Include="flAvg.h" />
     <ClInclude Include="kiss_fft130\kissfft.hh" />
     <ClInclude Include="kiss_fft130\kiss_fft.h" />
     <ClInclude Include="kiss_fft130\_kiss_fft_guts.h" />
+    <ClInclude Include="SerialPort.h" />
     <ClInclude Include="snippet.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="arduinoSender.cpp" />
     <ClCompile Include="capture.cpp" />
+    <ClCompile Include="flAvg.cpp" />
     <ClCompile Include="kiss_fft130\kiss_fft.c" />
     <ClCompile Include="schnitte.cpp" />
+    <ClCompile Include="SerialPort.cpp" />
     <ClCompile Include="snippet.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
