--- a/schnitte/schnitte/schnitte.vcxproj.filters
+++ b/schnitte/schnitte/schnitte.vcxproj.filters
@@ -48,6 +48,15 @@
     <ClInclude Include="SerialPort.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ColCalc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="hsvModder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="capturePar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -72,6 +81,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SerialPort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ColCalc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="hsvModder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="capturePar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
